# claus-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  check.sh  config.example.json  config.example.toml  default.nix  flake.nix  format.sh  test.sh
.github/workflows/: ci.yml
examples/: chat.rs  full_featured_chat.rs  pretty_print.rs  simple_chat.rs  streaming.rs
examples/assistant/: main.rs  tools.rs  ui.rs
src/: anthropic.rs  claudio.rs  conversation.rs  http_request.rs  json_scan.rs  lib.rs
src/claudio/: protocol.rs
