[package]
name = "klaus"
version = "0.1.0"
edition = "2024"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
description = "A I/O less Anthropic API implementation"
license = "MIT"
readme = "README.md"

[features]
default = []
reqwest = ["dep:reqwest"]
reqwest-blocking = ["reqwest", "reqwest/blocking"]

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"
required-features = ["reqwest-blocking"]

[[example]]
name = "full_featured_chat"
path = "examples/full_featured_chat.rs"
required-features = ["reqwest-blocking"]

[dependencies]
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
reedline = "0.35"
crossterm = "0.28"