[package]
name = "klaus"
version = "0.1.0"
edition = "2024"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
description = "A I/O less Anthropic API implementation"
license = "MIT"
readme = "README.md"

[features]
default = []
reqwest = ["dep:reqwest"]
reqwest-blocking = ["reqwest", "reqwest/blocking"]

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"
required-features = ["reqwest-blocking"]

[[example]]
name = "streaming"
path = "examples/streaming.rs"
required-features = ["reqwest"]

[[example]]
name = "assistant"
path = "examples/assistant/main.rs"
required-features = ["reqwest-blocking"]

[dependencies]
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
im = { version = "15.1", features = ["serde"] }
schemars = "0.8"

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
reedline = "0.35"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest-eventsource = "0.6.0"
futures = "0.3"