[package]
name = "klaus"
version = "0.1.0"
edition = "2024"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
description = "A I/O less Anthropic API implementation"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mbr/klaus-rs"
documentation = "https://docs.rs/klaus"

[features]
default = []
reqwest = ["dep:reqwest"]
reqwest-blocking = ["reqwest", "reqwest/blocking"]

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"
required-features = ["reqwest-blocking"]

[[example]]
name = "streaming"
path = "examples/streaming.rs"
required-features = ["reqwest"]

[[example]]
name = "assistant"
path = "examples/assistant/main.rs"
required-features = ["reqwest-blocking"]

[dependencies]
reqwest = { version = "*", optional = true }
im = { version = "15.1", features = ["serde"] }
schemars = "0.8"
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
# reqwest = { workspace = true, features = ["blocking"] }
reedline = "0.35"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
reqwest-eventsource = "0.6.0"
futures = "0.3"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
